docs/envoy/v1.38.0/_sources/api-v3/config/core/v3/protocol.proto.rst.txt
.. _envoy_v3_api_file_envoy/config/core/v3/protocol.proto:

Protocol options (proto)
========================








.. _envoy_v3_api_msg_config.core.v3.QuicKeepAliveSettings:

config.core.v3.QuicKeepAliveSettings
------------------------------------


:repo:`[config.core.v3.QuicKeepAliveSettings proto] <api/envoy/config/core/v3/protocol.proto#L38>`

Config for keepalive probes in a QUIC connection.

.. note::

  QUIC keep-alive probing packets work differently from HTTP/2 keep-alive PINGs in a sense that the probing packet
  itself doesn't timeout waiting for a probing response. QUIC has a shorter idle timeout than TCP, so it doesn't rely on such probing to discover dead connections. If the peer fails to respond, the connection will idle timeout eventually. Thus, they are configured differently from :ref:`connection_keepalive <envoy_v3_api_field_config.core.v3.Http2ProtocolOptions.connection_keepalive>`.



.. code-block:: json
  :force:

  {
    "max_interval": {...},
    "initial_interval": {...}
  }

.. _envoy_v3_api_field_config.core.v3.QuicKeepAliveSettings.max_interval:


max_interval
  (`Duration <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#duration>`_) The max interval for a connection to send keep-alive probing packets (with ``PING`` or ``PATH_RESPONSE``). The value should be smaller than :ref:`connection idle_timeout <envoy_v3_api_field_config.listener.v3.QuicProtocolOptions.idle_timeout>` to prevent idle timeout while not less than ``1s`` to avoid throttling the connection or flooding the peer with probes.

  If :ref:`initial_interval <envoy_v3_api_field_config.core.v3.QuicKeepAliveSettings.initial_interval>` is absent or zero, a client connection will use this value to start probing.

  If zero, disable keepalive probing.
  If absent, use the QUICHE default interval to probe.


.. _envoy_v3_api_field_config.core.v3.QuicKeepAliveSettings.initial_interval:


initial_interval
  (`Duration <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#duration>`_) The interval to send the first few keep-alive probing packets to prevent connection from hitting the idle timeout. Subsequent probes will be sent, each one with an interval exponentially longer than previous one, till it reaches :ref:`max_interval <envoy_v3_api_field_config.core.v3.QuicKeepAliveSettings.max_interval>`. And the probes afterwards will always use :ref:`max_interval <envoy_v3_api_field_config.core.v3.QuicKeepAliveSettings.max_interval>`.

  The value should be smaller than :ref:`connection idle_timeout <envoy_v3_api_field_config.listener.v3.QuicProtocolOptions.idle_timeout>` to prevent idle timeout and smaller than max_interval to take effect.

  If absent, disable keepalive probing for a server connection. For a client connection, if :ref:`max_interval <envoy_v3_api_field_config.core.v3.QuicKeepAliveSettings.max_interval>` is zero, do not keepalive, otherwise use max_interval or QUICHE default to probe all the time.



.. _envoy_v3_api_msg_config.core.v3.QuicProtocolOptions:

config.core.v3.QuicProtocolOptions
----------------------------------


:repo:`[config.core.v3.QuicProtocolOptions proto] <api/envoy/config/core/v3/protocol.proto#L60>`

QUIC protocol options which apply to both downstream and upstream connections.



.. code-block:: json
  :force:

  {
    "max_concurrent_streams": {...},
    "initial_stream_window_size": {...},
    "initial_connection_window_size": {...},
    "num_timeouts_to_trigger_port_migration": {...},
    "connection_keepalive": {...},
    "connection_options": ...,
    "client_connection_options": ...,
    "idle_network_timeout": {...},
    "max_packet_length": {...},
    "client_packet_writer": {...},
    "memory_reduction_timeout": {...},
    "enable_scone": {...}
  }

.. _envoy_v3_api_field_config.core.v3.QuicProtocolOptions.max_concurrent_streams:


max_concurrent_streams
  (`UInt32Value <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#uint32value>`_) Maximum number of streams that the client can negotiate per connection. ``100``
  if not specified.


.. _envoy_v3_api_field_config.core.v3.QuicProtocolOptions.initial_stream_window_size:


initial_stream_window_size
  (`UInt32Value <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#uint32value>`_) `Initial stream-level flow-control receive window
  <https://tools.ietf.org/html/draft-ietf-quic-transport-34#section-4.1>`_ size. Valid values range from
  ``1`` to ``16777216`` (``2^24``, maximum supported by QUICHE) and defaults to ``16777216`` (``16 * 1024 * 1024``).

  .. note::

    ``16384`` (``2^14``) is the minimum window size supported in Google QUIC. If configured smaller than it, we will use
    ``16384`` instead. QUICHE IETF QUIC implementation supports ``1`` byte window. We only support increasing the default
    window size now, so it's also the minimum.

  This field also acts as a soft limit on the number of bytes Envoy will buffer per-stream in the
  QUIC stream send and receive buffers. Once the buffer reaches this pointer, watermark callbacks will fire to
  stop the flow of data to the stream buffers.


.. _envoy_v3_api_field_config.core.v3.QuicProtocolOptions.initial_connection_window_size:


initial_connection_window_size
  (`UInt32Value <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#uint32value>`_) Similar to ``initial_stream_window_size``, but for connection-level
  flow-control. Valid values range from ``1`` to ``25165824`` (``24MB``, maximum supported by QUICHE) and defaults
  to ``25165824`` (``24 * 1024 * 1024``).

  .. note::

    ``16384`` (``2^14``) is the minimum window size supported in Google QUIC. We only support increasing the default
    window size now, so it's also the minimum.



.. _envoy_v3_api_field_config.core.v3.QuicProtocolOptions.num_timeouts_to_trigger_port_migration:


num_timeouts_to_trigger_port_migration
  (`UInt32Value <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#uint32value>`_) The number of timeouts that can occur before port migration is triggered for QUIC clients.
  This defaults to ``4``. If set to ``0``, port migration will not occur on path degrading.
  Timeout here refers to QUIC internal path degrading timeout mechanism, such as ``PTO``.
  This has no effect on server sessions.


.. _envoy_v3_api_field_config.core.v3.QuicProtocolOptions.connection_keepalive:


connection_keepalive
  (:ref:`config.core.v3.QuicKeepAliveSettings <envoy_v3_api_msg_config.core.v3.QuicKeepAliveSettings>`) Probes the peer at the configured interval to solicit traffic, i.e. ``ACK`` or ``PATH_RESPONSE``, from the peer to push back connection idle timeout.
  If absent, use the default keepalive behavior of which a client connection sends ``PING``s every ``15s``, and a server connection doesn't do anything.


.. _envoy_v3_api_field_config.core.v3.QuicProtocolOptions.connection_options:


connection_options
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) A comma-separated list of strings representing QUIC connection options defined in
  `QUICHE <https://github.com/google/quiche/blob/main/quiche/quic/core/crypto/crypto_protocol.h>`_ and to be sent by upstream connections.


.. _envoy_v3_api_field_config.core.v3.QuicProtocolOptions.client_connection_options:


client_connection_options
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) A comma-separated list of strings representing QUIC client connection options defined in
  `QUICHE <https://github.com/google/quiche/blob/main/quiche/quic/core/crypto/crypto_protocol.h>`_ and to be sent by upstream connections.


.. _envoy_v3_api_field_config.core.v3.QuicProtocolOptions.idle_network_timeout:


idle_network_timeout
  (`Duration <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#duration>`_) The duration that a QUIC connection stays idle before it closes itself. If this field is not present, QUICHE
  default ``600s`` will be applied.
  For internal corporate network, a long timeout is often fine.
  But for client facing network, ``30s`` is usually a good choice.
  Do not add an upper bound here. A long idle timeout is useful for maintaining warm connections at non-front-line proxy for low QPS services.


.. _envoy_v3_api_field_config.core.v3.QuicProtocolOptions.max_packet_length:


max_packet_length
  (`UInt64Value <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#uint64value>`_) Maximum packet length for QUIC connections. It refers to the largest size of a QUIC packet that can be transmitted over the connection.
  If not specified, one of the `default values in QUICHE <https://github.com/google/quiche/blob/main/quiche/quic/core/quic_constants.h>`_ is used.


.. _envoy_v3_api_field_config.core.v3.QuicProtocolOptions.client_packet_writer:


client_packet_writer
  (:ref:`config.core.v3.TypedExtensionConfig <envoy_v3_api_msg_config.core.v3.TypedExtensionConfig>`) A customized UDP socket and a QUIC packet writer using the socket for
  client connections. i.e. Mobile uses its own implementation to interact
  with platform socket APIs.
  If not present, the default platform-independent socket and writer will be used.


  .. _extension_category_envoy.quic.client_packet_writer:

  .. tip::

    This extension category has the following known extensions:


    - :ref:`envoy.quic.packet_writer.default <extension_envoy.quic.packet_writer.default>`





.. _envoy_v3_api_field_config.core.v3.QuicProtocolOptions.memory_reduction_timeout:


memory_reduction_timeout
  (`Duration <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#duration>`_) Timeout for a QUIC connection to schedule memory reduction callback when the network has been idle for a while.
  This value should be smaller than the idle timeout to take effect.
  If not specified, memory reduction is set to infinite by QUIC connection (disabled).


.. _envoy_v3_api_field_config.core.v3.QuicProtocolOptions.enable_scone:


enable_scone
  (`BoolValue <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#boolvalue>`_) If true, the QUIC connection will signal support for `SCONE <https://datatracker.ietf.org/doc/draft-ietf-scone-protocol/>`_ (Standard
  Communication with Network Elements) and process SCONE packets.
  If not present, the QUICHE default behavior will be used.


.. _envoy_v3_api_msg_config.core.v3.QuicProtocolOptions.ConnectionMigrationSettings:

config.core.v3.QuicProtocolOptions.ConnectionMigrationSettings
--------------------------------------------------------------


:repo:`[config.core.v3.QuicProtocolOptions.ConnectionMigrationSettings proto] <api/envoy/config/core/v3/protocol.proto#L69>`

Config for QUIC connection migration across network interfaces, i.e. cellular to WIFI, upon
network change events from the platform, i.e. the current network gets
disconnected, or upon the QUIC detecting a bad connection. After migration, the
connection may be on a different network other than the default network
picked by the platform. Both iOS and Android will use a default network to interact with the internet, usually prefer unmetered network (WIFI)
over metered ones (cellular). And users can specify which network to be used as the default. A connection on non-default network is only allowed to
serve new requests for a certain period of time before being drained, and
meanwhile, QUIC will try to migrate to the default network if possible.



.. code-block:: json
  :force:

  {
    "migrate_idle_connections": {...},
    "max_time_on_non_default_network": {...}
  }

.. _envoy_v3_api_field_config.core.v3.QuicProtocolOptions.ConnectionMigrationSettings.migrate_idle_connections:


migrate_idle_connections
  (:ref:`config.core.v3.QuicProtocolOptions.ConnectionMigrationSettings.MigrateIdleConnectionSettings <envoy_v3_api_msg_config.core.v3.QuicProtocolOptions.ConnectionMigrationSettings.MigrateIdleConnectionSettings>`) Config whether and how to migrate idle connections.
  If absent, idle connections will not be migrated but be closed upon
  migration signals.


.. _envoy_v3_api_field_config.core.v3.QuicProtocolOptions.ConnectionMigrationSettings.max_time_on_non_default_network:


max_time_on_non_default_network
  (`Duration <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#duration>`_) After migrating to a non-default network interface, the connection will
  only be allowed to stay on that network for up to this period of time before
  being drained unless it migrates to the default network or that network
  gets picked as the default by the device by then.
  Default to 128s.


.. _envoy_v3_api_msg_config.core.v3.QuicProtocolOptions.ConnectionMigrationSettings.MigrateIdleConnectionSettings:

config.core.v3.QuicProtocolOptions.ConnectionMigrationSettings.MigrateIdleConnectionSettings
--------------------------------------------------------------------------------------------


:repo:`[config.core.v3.QuicProtocolOptions.ConnectionMigrationSettings.MigrateIdleConnectionSettings proto] <api/envoy/config/core/v3/protocol.proto#L71>`

Config for options to migrate idle connections which aren't serving any requests.



.. code-block:: json
  :force:

  {
    "max_idle_time_before_migration": {...}
  }

.. _envoy_v3_api_field_config.core.v3.QuicProtocolOptions.ConnectionMigrationSettings.MigrateIdleConnectionSettings.max_idle_time_before_migration:


max_idle_time_before_migration
  (`Duration <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#duration>`_) If idle connections are allowed to be migrated, only migrate the connection
  if it hasn't been idle for longer than this idle period. Otherwise, the
  connection will be closed instead.
  Default to 30s.





.. _envoy_v3_api_msg_config.core.v3.UpstreamHttpProtocolOptions:

config.core.v3.UpstreamHttpProtocolOptions
------------------------------------------


:repo:`[config.core.v3.UpstreamHttpProtocolOptions proto] <api/envoy/config/core/v3/protocol.proto#L188>`




.. code-block:: json
  :force:

  {
    "auto_sni": ...,
    "auto_san_validation": ...,
    "override_auto_sni_header": ...
  }

.. _envoy_v3_api_field_config.core.v3.UpstreamHttpProtocolOptions.auto_sni:


auto_sni
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Set transport socket `SNI <https://en.wikipedia.org/wiki/Server_Name_Indication>`_ for new
  upstream connections based on the downstream HTTP host/authority header or any other arbitrary
  header when :ref:`override_auto_sni_header <envoy_v3_api_field_config.core.v3.UpstreamHttpProtocolOptions.override_auto_sni_header>`
  is set, as seen by the :ref:`router filter <config_http_filters_router>`.
  Does nothing if a filter before the http router filter sets the corresponding metadata.

  See :ref:`SNI configuration <start_quick_start_securing_sni_client>` for details on how this
  interacts with other validation options.


.. _envoy_v3_api_field_config.core.v3.UpstreamHttpProtocolOptions.auto_san_validation:


auto_san_validation
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Automatic validate upstream presented certificate for new upstream connections based on the
  downstream HTTP host/authority header or any other arbitrary header when :ref:`override_auto_sni_header <envoy_v3_api_field_config.core.v3.UpstreamHttpProtocolOptions.override_auto_sni_header>`
  is set, as seen by the :ref:`router filter <config_http_filters_router>`.
  This field is intended to be set with ``auto_sni`` field.
  Does nothing if a filter before the http router filter sets the corresponding metadata.

  See :ref:`validation configuration <start_quick_start_securing_validation>` for how this interacts with
  other validation options.


.. _envoy_v3_api_field_config.core.v3.UpstreamHttpProtocolOptions.override_auto_sni_header:


override_auto_sni_header
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) An optional alternative to the host/authority header to be used for setting the SNI value.
  It should be a valid downstream HTTP header, as seen by the
  :ref:`router filter <config_http_filters_router>`.
  If unset, host/authority header will be used for populating the SNI. If the specified header
  is not found or the value is empty, host/authority header will be used instead.
  This field is intended to be set with ``auto_sni`` and/or ``auto_san_validation`` fields.
  If none of these fields are set then setting this would be a no-op.
  Does nothing if a filter before the http router filter sets the corresponding metadata.



.. _envoy_v3_api_msg_config.core.v3.AlternateProtocolsCacheOptions:

config.core.v3.AlternateProtocolsCacheOptions
---------------------------------------------


:repo:`[config.core.v3.AlternateProtocolsCacheOptions proto] <api/envoy/config/core/v3/protocol.proto#L229>`

Configures the alternate protocols cache which tracks alternate protocols that can be used to
make an HTTP connection to an origin server. See https://tools.ietf.org/html/rfc7838 for
HTTP Alternative Services and https://datatracker.ietf.org/doc/html/draft-ietf-dnsop-svcb-https-04
for the "HTTPS" DNS resource record.



.. code-block:: json
  :force:

  {
    "name": ...,
    "max_entries": {...},
    "key_value_store_config": {...},
    "prepopulated_entries": []
  }

.. _envoy_v3_api_field_config.core.v3.AlternateProtocolsCacheOptions.name:


name
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) The name of the cache. Multiple named caches allow independent alternate protocols cache
  configurations to operate within a single Envoy process using different configurations. All
  alternate protocols cache options with the same name *must* be equal in all fields when
  referenced from different configuration components. Configuration will fail to load if this is
  not the case.


.. _envoy_v3_api_field_config.core.v3.AlternateProtocolsCacheOptions.max_entries:


max_entries
  (`UInt32Value <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#uint32value>`_) The maximum number of entries that the cache will hold. If not specified defaults to ``1024``.

  .. note::

    The implementation is approximate and enforced independently on each worker thread, thus
    it is possible for the maximum entries in the cache to go slightly above the configured
    value depending on timing. This is similar to how other circuit breakers work.


.. _envoy_v3_api_field_config.core.v3.AlternateProtocolsCacheOptions.key_value_store_config:


key_value_store_config
  (:ref:`config.core.v3.TypedExtensionConfig <envoy_v3_api_msg_config.core.v3.TypedExtensionConfig>`) Allows configuring a persistent
  :ref:`key value store <envoy_v3_api_msg_config.common.key_value.v3.KeyValueStoreConfig>` to flush
  alternate protocols entries to disk.
  This function is currently only supported if concurrency is 1
  Cached entries will take precedence over pre-populated entries below.


.. _envoy_v3_api_field_config.core.v3.AlternateProtocolsCacheOptions.prepopulated_entries:


prepopulated_entries
  (**repeated** :ref:`config.core.v3.AlternateProtocolsCacheOptions.AlternateProtocolsCacheEntry <envoy_v3_api_msg_config.core.v3.AlternateProtocolsCacheOptions.AlternateProtocolsCacheEntry>`) Allows pre-populating the cache with entries, as described above.


.. _envoy_v3_api_msg_config.core.v3.AlternateProtocolsCacheOptions.AlternateProtocolsCacheEntry:

config.core.v3.AlternateProtocolsCacheOptions.AlternateProtocolsCacheEntry
--------------------------------------------------------------------------


:repo:`[config.core.v3.AlternateProtocolsCacheOptions.AlternateProtocolsCacheEntry proto] <api/envoy/config/core/v3/protocol.proto#L239>`

Allows pre-populating the cache with HTTP/3 alternate protocols entries with a 7 day lifetime.
This will cause Envoy to attempt HTTP/3 to those upstreams, even if the upstreams have not
advertised HTTP/3 support. These entries will be overwritten by alt-svc
response headers or cached values.
As with regular cached entries, if the origin response would result in clearing an existing
alternate protocol cache entry, pre-populated entries will also be cleared.
Adding a cache entry with hostname=foo.com port=123 is the equivalent of getting
response headers
alt-svc: h3=:"123"; ma=86400" in a response to a request to foo.com:123



.. code-block:: json
  :force:

  {
    "hostname": ...,
    "port": ...
  }

.. _envoy_v3_api_field_config.core.v3.AlternateProtocolsCacheOptions.AlternateProtocolsCacheEntry.hostname:


hostname
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) The host name for the alternate protocol entry.


.. _envoy_v3_api_field_config.core.v3.AlternateProtocolsCacheOptions.AlternateProtocolsCacheEntry.port:


port
  (`uint32 <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) The port for the alternate protocol entry.




.. _envoy_v3_api_msg_config.core.v3.HttpProtocolOptions:

config.core.v3.HttpProtocolOptions
----------------------------------


:repo:`[config.core.v3.HttpProtocolOptions proto] <api/envoy/config/core/v3/protocol.proto#L287>`




.. code-block:: json
  :force:

  {
    "idle_timeout": {...},
    "max_connection_duration": {...},
    "max_headers_count": {...},
    "max_response_headers_kb": {...},
    "max_stream_duration": {...},
    "headers_with_underscores_action": ...,
    "max_requests_per_connection": {...}
  }

.. _envoy_v3_api_field_config.core.v3.HttpProtocolOptions.idle_timeout:


idle_timeout
  (`Duration <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#duration>`_) The idle timeout for connections. The idle timeout is defined as the
  period in which there are no active requests. When the
  idle timeout is reached the connection will be closed. If the connection is an HTTP/2
  downstream connection a drain sequence will occur prior to closing the connection, see
  :ref:`drain_timeout
  <envoy_v3_api_field_extensions.filters.network.http_connection_manager.v3.HttpConnectionManager.drain_timeout>`.

  .. note::

    Request based timeouts mean that HTTP/2 PINGs will not keep the connection alive.

  If not specified, this defaults to ``1 hour``. To disable idle timeouts explicitly set this to ``0``.

  .. warning::
    Disabling this timeout has a highly likelihood of yielding connection leaks due to lost TCP
    FIN packets, etc.

  If the :ref:`overload action <config_overload_manager_overload_actions>` "envoy.overload_actions.reduce_timeouts"
  is configured, this timeout is scaled for downstream connections according to the value for
  :ref:`HTTP_DOWNSTREAM_CONNECTION_IDLE <envoy_v3_api_enum_value_config.overload.v3.ScaleTimersOverloadActionConfig.TimerType.HTTP_DOWNSTREAM_CONNECTION_IDLE>`.


.. _envoy_v3_api_field_config.core.v3.HttpProtocolOptions.max_connection_duration:


max_connection_duration
  (`Duration <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#duration>`_) The maximum duration of a connection. The duration is defined as a period since a connection
  was established. If not set, there is no max duration. When max_connection_duration is reached,
  the drain sequence will kick-in. The connection will be closed after the drain timeout period
  if there are no active streams. See :ref:`drain_timeout
  <envoy_v3_api_field_extensions.filters.network.http_connection_manager.v3.HttpConnectionManager.drain_timeout>`.


.. _envoy_v3_api_field_config.core.v3.HttpProtocolOptions.max_headers_count:


max_headers_count
  (`UInt32Value <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#uint32value>`_) The maximum number of headers (request headers if configured on HttpConnectionManager,
  response headers when configured on a cluster).
  If unconfigured, the default maximum number of headers allowed is ``100``.
  The default value for requests can be overridden by setting runtime key ``envoy.reloadable_features.max_request_headers_count``.
  The default value for responses can be overridden by setting runtime key ``envoy.reloadable_features.max_response_headers_count``.
  Downstream requests that exceed this limit will receive a ``HTTP 431`` response for HTTP/1.x and cause a stream
  reset for HTTP/2.
  Upstream responses that exceed this limit will result in a ``HTTP 502`` response.


.. _envoy_v3_api_field_config.core.v3.HttpProtocolOptions.max_response_headers_kb:


max_response_headers_kb
  (`UInt32Value <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#uint32value>`_) The maximum size of response headers.
  If unconfigured, the default is ``60 KiB``, except for HTTP/1 response headers which have a default
  of ``80 KiB``.
  The default value can be overridden by setting runtime key ``envoy.reloadable_features.max_response_headers_size_kb``.
  Responses that exceed this limit will result in a ``HTTP 503`` response.
  In Envoy, this setting is only valid when configured on an upstream cluster, not on the
  :ref:`HTTP Connection Manager
  <envoy_v3_api_field_extensions.filters.network.http_connection_manager.v3.HttpConnectionManager.common_http_protocol_options>`.

  .. note::

    Currently some protocol codecs impose limits on the maximum size of a single header.

    * HTTP/2 (when using nghttp2) limits a single header to around 100 KB by default. This can be
      adjusted via :ref:`max_header_field_size_kb
      <envoy_v3_api_field_config.core.v3.Http2ProtocolOptions.max_header_field_size_kb>`.
    * HTTP/3 limits a single header to around 1024 KB.



.. _envoy_v3_api_field_config.core.v3.HttpProtocolOptions.max_stream_duration:


max_stream_duration
  (`Duration <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#duration>`_) Total duration to keep alive an HTTP request/response stream. If the time limit is reached the stream will be
  reset independent of any other timeouts. If not specified, this value is not set.


.. _envoy_v3_api_field_config.core.v3.HttpProtocolOptions.headers_with_underscores_action:


headers_with_underscores_action
  (:ref:`config.core.v3.HttpProtocolOptions.HeadersWithUnderscoresAction <envoy_v3_api_enum_config.core.v3.HttpProtocolOptions.HeadersWithUnderscoresAction>`) Action to take when a client request with a header name containing underscore characters is received.
  If this setting is not specified, the value defaults to ``ALLOW``.

  .. note::

    Upstream responses are not affected by this setting.

  .. note::

    This only affects client headers. It does not affect headers added by Envoy filters and does not have any
    impact if added to cluster config.


.. _envoy_v3_api_field_config.core.v3.HttpProtocolOptions.max_requests_per_connection:


max_requests_per_connection
  (`UInt32Value <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#uint32value>`_) Optional maximum requests for both upstream and downstream connections.
  If not specified, there is no limit.
  Setting this parameter to ``1`` will effectively disable keep alive.
  For HTTP/2 and HTTP/3, due to concurrent stream processing, the limit is approximate.


.. _envoy_v3_api_enum_config.core.v3.HttpProtocolOptions.HeadersWithUnderscoresAction:

Enum config.core.v3.HttpProtocolOptions.HeadersWithUnderscoresAction
--------------------------------------------------------------------


:repo:`[config.core.v3.HttpProtocolOptions.HeadersWithUnderscoresAction proto] <api/envoy/config/core/v3/protocol.proto#L296>`

Action to take when Envoy receives client request with header names containing underscore
characters.
Underscore character is allowed in header names by the RFC-7230 and this behavior is implemented
as a security measure due to systems that treat '_' and '-' as interchangeable. Envoy by default allows client request headers with underscore
characters.



.. _envoy_v3_api_enum_value_config.core.v3.HttpProtocolOptions.HeadersWithUnderscoresAction.ALLOW:


ALLOW
  *(DEFAULT)* ⁣Allow headers with underscores. This is the default behavior.


.. _envoy_v3_api_enum_value_config.core.v3.HttpProtocolOptions.HeadersWithUnderscoresAction.REJECT_REQUEST:


REJECT_REQUEST
  ⁣Reject client request. HTTP/1 requests are rejected with ``HTTP 400`` status. HTTP/2 requests
  end with the stream reset. The ``httpN.requests_rejected_with_underscores_in_headers`` counter
  is incremented for each rejected request.


.. _envoy_v3_api_enum_value_config.core.v3.HttpProtocolOptions.HeadersWithUnderscoresAction.DROP_HEADER:


DROP_HEADER
  ⁣Drop the client header with name containing underscores. The header is dropped before the filter chain is
  invoked and as such filters will not see dropped headers. The
  ``httpN.dropped_headers_with_underscores`` is incremented for each dropped header.




.. _envoy_v3_api_msg_config.core.v3.Http1ProtocolOptions:

config.core.v3.Http1ProtocolOptions
-----------------------------------


:repo:`[config.core.v3.Http1ProtocolOptions proto] <api/envoy/config/core/v3/protocol.proto#L396>`




.. code-block:: json
  :force:

  {
    "allow_absolute_url": {...},
    "accept_http_10": ...,
    "default_host_for_http_10": ...,
    "header_key_format": {...},
    "enable_trailers": ...,
    "allow_chunked_length": ...,
    "override_stream_error_on_invalid_http_message": {...},
    "send_fully_qualified_url": ...,
    "ignore_http_11_upgrade": []
  }

.. _envoy_v3_api_field_config.core.v3.Http1ProtocolOptions.allow_absolute_url:


allow_absolute_url
  (`BoolValue <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#boolvalue>`_) Handle HTTP requests with absolute URLs in the requests. These requests
  are generally sent by clients to forward/explicit proxies. This allows clients to configure
  envoy as their HTTP proxy. In Unix, for example, this is typically done by setting the
  ``http_proxy`` environment variable.


.. _envoy_v3_api_field_config.core.v3.Http1ProtocolOptions.accept_http_10:


accept_http_10
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Handle incoming HTTP/1.0 and HTTP/0.9 requests.
  This is off by default, and not fully standards compliant. There is support for pre-HTTP/1.1
  style connect logic, dechunking, and handling lack of client host iff
  ``default_host_for_http_10`` is configured.


.. _envoy_v3_api_field_config.core.v3.Http1ProtocolOptions.default_host_for_http_10:


default_host_for_http_10
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) A default host for HTTP/1.0 requests. This is highly suggested if ``accept_http_10`` is true as
  Envoy does not otherwise support HTTP/1.0 without a Host header.
  This is a no-op if ``accept_http_10`` is not true.


.. _envoy_v3_api_field_config.core.v3.Http1ProtocolOptions.header_key_format:


header_key_format
  (:ref:`config.core.v3.Http1ProtocolOptions.HeaderKeyFormat <envoy_v3_api_msg_config.core.v3.Http1ProtocolOptions.HeaderKeyFormat>`) Describes how the keys for response headers should be formatted. By default, all header keys
  are lower cased.


.. _envoy_v3_api_field_config.core.v3.Http1ProtocolOptions.enable_trailers:


enable_trailers
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Enables trailers for HTTP/1. By default the HTTP/1 codec drops proxied trailers.

  .. attention::

    This only happens when Envoy is chunk encoding which occurs when:
    - The request is HTTP/1.1.
    - Is neither a ``HEAD`` only request nor a HTTP Upgrade.
    - Not a response to a ``HEAD`` request.
    - The ``Content-Length`` header is not present.


.. _envoy_v3_api_field_config.core.v3.Http1ProtocolOptions.allow_chunked_length:


allow_chunked_length
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Allows Envoy to process requests/responses with both ``Content-Length`` and ``Transfer-Encoding``
  headers set. By default such messages are rejected, but if option is enabled - Envoy will
  remove ``Content-Length`` header and process message.
  See `RFC7230, sec. 3.3.3 <https://tools.ietf.org/html/rfc7230#section-3.3.3>`_ for details.

  .. attention::

    Enabling this option might lead to request smuggling vulnerability, especially if traffic
    is proxied via multiple layers of proxies.


.. _envoy_v3_api_field_config.core.v3.Http1ProtocolOptions.override_stream_error_on_invalid_http_message:


override_stream_error_on_invalid_http_message
  (`BoolValue <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#boolvalue>`_) Allows invalid HTTP messaging. When this option is false, then Envoy will terminate
  HTTP/1.1 connections upon receiving an invalid HTTP message. However,
  when this option is true, then Envoy will leave the HTTP/1.1 connection
  open where possible.
  If set, this overrides any HCM :ref:`stream_error_on_invalid_http_messaging
  <envoy_v3_api_field_extensions.filters.network.http_connection_manager.v3.HttpConnectionManager.stream_error_on_invalid_http_message>`.


.. _envoy_v3_api_field_config.core.v3.Http1ProtocolOptions.send_fully_qualified_url:


send_fully_qualified_url
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Allows sending fully qualified URLs when proxying the first line of the
  response. By default, Envoy will only send the path components in the first line.
  If this is true, Envoy will create a fully qualified URI composing scheme
  (inferred if not present), host (from the host/:authority header) and path
  (from first line or :path header).


.. _envoy_v3_api_field_config.core.v3.Http1ProtocolOptions.ignore_http_11_upgrade:


ignore_http_11_upgrade
  (**repeated** :ref:`type.matcher.v3.StringMatcher <envoy_v3_api_msg_type.matcher.v3.StringMatcher>`) Ignore HTTP/1.1 upgrade values matching any of the supplied matchers.

  .. note::

    ``h2c`` upgrades are always removed for backwards compatibility, regardless of the
    value in this setting.


.. _envoy_v3_api_msg_config.core.v3.Http1ProtocolOptions.HeaderKeyFormat:

config.core.v3.Http1ProtocolOptions.HeaderKeyFormat
---------------------------------------------------


:repo:`[config.core.v3.Http1ProtocolOptions.HeaderKeyFormat proto] <api/envoy/config/core/v3/protocol.proto#L401>`




.. code-block:: json
  :force:

  {
    "proper_case_words": {...},
    "stateful_formatter": {...}
  }

.. _envoy_v3_api_field_config.core.v3.Http1ProtocolOptions.HeaderKeyFormat.proper_case_words:


proper_case_words
  (:ref:`config.core.v3.Http1ProtocolOptions.HeaderKeyFormat.ProperCaseWords <envoy_v3_api_msg_config.core.v3.Http1ProtocolOptions.HeaderKeyFormat.ProperCaseWords>`) Formats the header by proper casing words: the first character and any character following
  a special character will be capitalized if it's an alpha character. For example,
  ``"content-type"`` becomes ``"Content-Type"``, and ``"foo$b#$are"`` becomes ``"Foo$B#$Are"``.

  .. note::

    While this results in most headers following conventional casing, certain headers
    are not covered. For example, the ``"TE"`` header will be formatted as ``"Te"``.


  

  Precisely one of :ref:`proper_case_words <envoy_v3_api_field_config.core.v3.Http1ProtocolOptions.HeaderKeyFormat.proper_case_words>`, :ref:`stateful_formatter <envoy_v3_api_field_config.core.v3.Http1ProtocolOptions.HeaderKeyFormat.stateful_formatter>` must be set.

.. _envoy_v3_api_field_config.core.v3.Http1ProtocolOptions.HeaderKeyFormat.stateful_formatter:


stateful_formatter
  (:ref:`config.core.v3.TypedExtensionConfig <envoy_v3_api_msg_config.core.v3.TypedExtensionConfig>`) Configuration for stateful formatter extensions that allow using received headers to
  affect the output of encoding headers. E.g., preserving case during proxying.


  .. _extension_category_envoy.http.stateful_header_formatters:

  .. tip::

    This extension category has the following known extensions:


    - :ref:`envoy.http.stateful_header_formatters.preserve_case <extension_envoy.http.stateful_header_formatters.preserve_case>`





  

  Precisely one of :ref:`proper_case_words <envoy_v3_api_field_config.core.v3.Http1ProtocolOptions.HeaderKeyFormat.proper_case_words>`, :ref:`stateful_formatter <envoy_v3_api_field_config.core.v3.Http1ProtocolOptions.HeaderKeyFormat.stateful_formatter>` must be set.

.. _envoy_v3_api_msg_config.core.v3.Http1ProtocolOptions.HeaderKeyFormat.ProperCaseWords:

config.core.v3.Http1ProtocolOptions.HeaderKeyFormat.ProperCaseWords
-------------------------------------------------------------------


:repo:`[config.core.v3.Http1ProtocolOptions.HeaderKeyFormat.ProperCaseWords proto] <api/envoy/config/core/v3/protocol.proto#L405>`








.. _envoy_v3_api_msg_config.core.v3.KeepaliveSettings:

config.core.v3.KeepaliveSettings
--------------------------------


:repo:`[config.core.v3.KeepaliveSettings proto] <api/envoy/config/core/v3/protocol.proto#L521>`




.. code-block:: json
  :force:

  {
    "interval": {...},
    "timeout": {...},
    "interval_jitter": {...},
    "connection_idle_interval": {...}
  }

.. _envoy_v3_api_field_config.core.v3.KeepaliveSettings.interval:


interval
  (`Duration <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#duration>`_) Send HTTP/2 PING frames at this period, in order to test that the connection is still alive.
  If this is zero, interval PINGs will not be sent.


.. _envoy_v3_api_field_config.core.v3.KeepaliveSettings.timeout:


timeout
  (`Duration <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#duration>`_, *REQUIRED*) How long to wait for a response to a keepalive PING. If a response is not received within this
  time period, the connection will be aborted.

  .. note::

    In order to prevent the influence of Head-of-line (HOL) blocking the timeout period is extended when *any* frame is received on
    the connection, under the assumption that if a frame is received the connection is healthy.


.. _envoy_v3_api_field_config.core.v3.KeepaliveSettings.interval_jitter:


interval_jitter
  (:ref:`type.v3.Percent <envoy_v3_api_msg_type.v3.Percent>`) A random jitter amount as a percentage of interval that will be added to each interval.
  A value of zero means there will be no jitter.
  The default value is ``15%``.


.. _envoy_v3_api_field_config.core.v3.KeepaliveSettings.connection_idle_interval:


connection_idle_interval
  (`Duration <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#duration>`_) If the connection has been idle for this duration, send a HTTP/2 ping ahead
  of new stream creation, to quickly detect dead connections.
  If this is zero, this type of PING will not be sent.
  If an interval ping is outstanding, a second ping will not be sent as the
  interval ping will determine if the connection is dead.

  The same feature for HTTP/3 is given by inheritance from QUICHE which uses :ref:`connection idle_timeout <envoy_v3_api_field_config.listener.v3.QuicProtocolOptions.idle_timeout>` and the current PTO of the connection to decide whether to probe before sending a new request.



.. _envoy_v3_api_msg_config.core.v3.Http2ProtocolOptions:

config.core.v3.Http2ProtocolOptions
-----------------------------------


:repo:`[config.core.v3.Http2ProtocolOptions proto] <api/envoy/config/core/v3/protocol.proto#L555>`




.. code-block:: json
  :force:

  {
    "hpack_table_size": {...},
    "max_concurrent_streams": {...},
    "initial_stream_window_size": {...},
    "initial_connection_window_size": {...},
    "allow_connect": ...,
    "max_outbound_frames": {...},
    "max_outbound_control_frames": {...},
    "max_consecutive_inbound_frames_with_empty_payload": {...},
    "max_inbound_priority_frames_per_stream": {...},
    "max_inbound_window_update_frames_per_data_frame_sent": {...},
    "stream_error_on_invalid_http_messaging": ...,
    "override_stream_error_on_invalid_http_message": {...},
    "connection_keepalive": {...},
    "max_metadata_size": {...},
    "enable_huffman_encoding": {...},
    "max_header_field_size_kb": {...},
    "disallow_obs_text": {...}
  }

.. _envoy_v3_api_field_config.core.v3.Http2ProtocolOptions.hpack_table_size:


hpack_table_size
  (`UInt32Value <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#uint32value>`_) `Maximum table size <https://httpwg.org/specs/rfc7541.html#rfc.section.4.2>`_
  (in octets) that the encoder is permitted to use for the dynamic HPACK table. Valid values
  range from ``0`` to ``4294967295`` (``2^32 - 1``) and defaults to ``4096``. ``0`` effectively disables header
  compression.


.. _envoy_v3_api_field_config.core.v3.Http2ProtocolOptions.max_concurrent_streams:


max_concurrent_streams
  (`UInt32Value <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#uint32value>`_) `Maximum concurrent streams <https://httpwg.org/specs/rfc7540.html#rfc.section.5.1.2>`_
  allowed for peer on one HTTP/2 connection. Valid values range from ``1`` to ``2147483647`` (``2^31 - 1``)
  and defaults to ``1024`` for safety and should be sufficient for most use cases.

  For upstream connections, this also limits how many streams Envoy will initiate concurrently
  on a single connection. If the limit is reached, Envoy may queue requests or establish
  additional connections (as allowed per circuit breaker limits).

  This acts as an upper bound: Envoy will lower the max concurrent streams allowed on a given
  connection based on upstream settings. Config dumps will reflect the configured upper bound,
  not the per-connection negotiated limits.


.. _envoy_v3_api_field_config.core.v3.Http2ProtocolOptions.initial_stream_window_size:


initial_stream_window_size
  (`UInt32Value <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#uint32value>`_) `Initial stream-level flow-control window
  <https://httpwg.org/specs/rfc7540.html#rfc.section.6.9.2>`_ size. Valid values range from ``65535``
  (``2^16 - 1``, HTTP/2 default) to ``2147483647`` (``2^31 - 1``, HTTP/2 maximum) and defaults to
  ``16MiB`` (``16 * 1024 * 1024``).

  .. note::

    ``65535`` is the initial window size from HTTP/2 spec. We only support increasing the default window size now,
    so it's also the minimum.

  This field also acts as a soft limit on the number of bytes Envoy will buffer per-stream in the
  HTTP/2 codec buffers. Once the buffer reaches this pointer, watermark callbacks will fire to
  stop the flow of data to the codec buffers.


.. _envoy_v3_api_field_config.core.v3.Http2ProtocolOptions.initial_connection_window_size:


initial_connection_window_size
  (`UInt32Value <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#uint32value>`_) Similar to ``initial_stream_window_size``, but for connection-level flow-control
  window. The default is ``24MiB`` (``24 * 1024 * 1024``).


.. _envoy_v3_api_field_config.core.v3.Http2ProtocolOptions.allow_connect:


allow_connect
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Allows proxying Websocket and other upgrades over H2 connect.


.. _envoy_v3_api_field_config.core.v3.Http2ProtocolOptions.max_outbound_frames:


max_outbound_frames
  (`UInt32Value <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#uint32value>`_) Limit the number of pending outbound downstream frames of all types (frames that are waiting to
  be written into the socket). Exceeding this limit triggers flood mitigation and connection is
  terminated. The ``http2.outbound_flood`` stat tracks the number of terminated connections due
  to flood mitigation. The default limit is ``10000``.


.. _envoy_v3_api_field_config.core.v3.Http2ProtocolOptions.max_outbound_control_frames:


max_outbound_control_frames
  (`UInt32Value <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#uint32value>`_) Limit the number of pending outbound downstream frames of types ``PING``, ``SETTINGS`` and ``RST_STREAM``,
  preventing high memory utilization when receiving continuous stream of these frames. Exceeding
  this limit triggers flood mitigation and connection is terminated. The
  ``http2.outbound_control_flood`` stat tracks the number of terminated connections due to flood
  mitigation. The default limit is ``1000``.


.. _envoy_v3_api_field_config.core.v3.Http2ProtocolOptions.max_consecutive_inbound_frames_with_empty_payload:


max_consecutive_inbound_frames_with_empty_payload
  (`UInt32Value <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#uint32value>`_) Limit the number of consecutive inbound frames of types ``HEADERS``, ``CONTINUATION`` and ``DATA`` with an
  empty payload and no end stream flag. Those frames have no legitimate use and are abusive, but
  might be a result of a broken HTTP/2 implementation. The ``http2.inbound_empty_frames_flood``
  stat tracks the number of connections terminated due to flood mitigation.
  Setting this to ``0`` will terminate connection upon receiving first frame with an empty payload
  and no end stream flag. The default limit is ``1``.


.. _envoy_v3_api_field_config.core.v3.Http2ProtocolOptions.max_inbound_priority_frames_per_stream:


max_inbound_priority_frames_per_stream
  (`UInt32Value <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#uint32value>`_) Limit the number of inbound ``PRIORITY`` frames allowed per each opened stream. If the number
  of ``PRIORITY`` frames received over the lifetime of connection exceeds the value calculated
  using this formula::

    ``max_inbound_priority_frames_per_stream`` * (1 + ``opened_streams``)

  the connection is terminated. For downstream connections the ``opened_streams`` is incremented when
  Envoy receives complete response headers from the upstream server. For upstream connection the
  ``opened_streams`` is incremented when Envoy sends the ``HEADERS`` frame for a new stream. The
  ``http2.inbound_priority_frames_flood`` stat tracks
  the number of connections terminated due to flood mitigation. The default limit is ``100``.


.. _envoy_v3_api_field_config.core.v3.Http2ProtocolOptions.max_inbound_window_update_frames_per_data_frame_sent:


max_inbound_window_update_frames_per_data_frame_sent
  (`UInt32Value <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#uint32value>`_) Limit the number of inbound ``WINDOW_UPDATE`` frames allowed per ``DATA`` frame sent. If the number
  of ``WINDOW_UPDATE`` frames received over the lifetime of connection exceeds the value calculated
  using this formula::

    ``5 + 2 * (opened_streams +
             max_inbound_window_update_frames_per_data_frame_sent * outbound_data_frames)``

  the connection is terminated. For downstream connections the ``opened_streams`` is incremented when
  Envoy receives complete response headers from the upstream server. For upstream connections the
  ``opened_streams`` is incremented when Envoy sends the ``HEADERS`` frame for a new stream. The
  ``http2.inbound_priority_frames_flood`` stat tracks the number of connections terminated due to
  flood mitigation. The default ``max_inbound_window_update_frames_per_data_frame_sent`` value is ``10``.
  Setting this to ``1`` should be enough to support HTTP/2 implementations with basic flow control,
  but more complex implementations that try to estimate available bandwidth require at least ``2``.


.. _envoy_v3_api_field_config.core.v3.Http2ProtocolOptions.stream_error_on_invalid_http_messaging:


stream_error_on_invalid_http_messaging
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Allows invalid HTTP messaging and headers. When this option is disabled (default), then
  the whole HTTP/2 connection is terminated upon receiving invalid HEADERS frame. However,
  when this option is enabled, only the offending stream is terminated.

  This is overridden by HCM :ref:`stream_error_on_invalid_http_messaging
  <envoy_v3_api_field_extensions.filters.network.http_connection_manager.v3.HttpConnectionManager.stream_error_on_invalid_http_message>`
  iff present.

  This is deprecated in favor of :ref:`override_stream_error_on_invalid_http_message
  <envoy_v3_api_field_config.core.v3.Http2ProtocolOptions.override_stream_error_on_invalid_http_message>`

  See `RFC7540, sec. 8.1 <https://tools.ietf.org/html/rfc7540#section-8.1>`_ for details.


.. _envoy_v3_api_field_config.core.v3.Http2ProtocolOptions.override_stream_error_on_invalid_http_message:


override_stream_error_on_invalid_http_message
  (`BoolValue <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#boolvalue>`_) Allows invalid HTTP messaging and headers. When this option is disabled (default), then
  the whole HTTP/2 connection is terminated upon receiving invalid HEADERS frame. However,
  when this option is enabled, only the offending stream is terminated.

  This overrides any HCM :ref:`stream_error_on_invalid_http_messaging
  <envoy_v3_api_field_extensions.filters.network.http_connection_manager.v3.HttpConnectionManager.stream_error_on_invalid_http_message>`

  See `RFC7540, sec. 8.1 <https://tools.ietf.org/html/rfc7540#section-8.1>`_ for details.


.. _envoy_v3_api_field_config.core.v3.Http2ProtocolOptions.connection_keepalive:


connection_keepalive
  (:ref:`config.core.v3.KeepaliveSettings <envoy_v3_api_msg_config.core.v3.KeepaliveSettings>`) Send HTTP/2 PING frames to verify that the connection is still healthy. If the remote peer
  does not respond within the configured timeout, the connection will be aborted.


.. _envoy_v3_api_field_config.core.v3.Http2ProtocolOptions.max_metadata_size:


max_metadata_size
  (`UInt64Value <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#uint64value>`_) Configure the maximum amount of metadata than can be handled per stream. Defaults to ``1 MB``.


.. _envoy_v3_api_field_config.core.v3.Http2ProtocolOptions.enable_huffman_encoding:


enable_huffman_encoding
  (`BoolValue <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#boolvalue>`_) Controls whether to encode headers using huffman encoding.
  This can be useful in cases where the cpu spent encoding the headers isn't
  worth the network bandwidth saved e.g. for localhost.
  If unset, uses the data plane's default value.


.. _envoy_v3_api_field_config.core.v3.Http2ProtocolOptions.max_header_field_size_kb:


max_header_field_size_kb
  (`UInt32Value <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#uint32value>`_) Configures the maximum wire-encoded size in KB of an individual header field (name or value)
  that the ``nghttp2`` HPACK inflater will accept. This limit applies to the HPACK-compressed
  length on the wire, not the decoded length. If not specified, defaults to ``64`` KB
  which is the ``nghttp2`` default.

  This limit applies to headers received by the codec. When configured on the downstream
  HTTP Connection Manager, it limits individual request header fields. When configured on an
  upstream cluster, it limits individual response header fields.

  Due to Huffman encoding, the decoded header size that passes a given wire limit depends
  on the compression ratio of the content. For example, at the default ``64`` KB wire
  limit, highly compressible header values can be approximately ``100`` KB when decoded.
  Increasing this limit allows accepting larger individual headers at the cost of increased
  memory usage during HPACK decompression.

  This option only applies when using ``nghttp2``. It is a no-op for ``oghttp2``. The configured
  value of this field sets the per-header field size limit, which must not exceed the
  applicable aggregate total header size limit. Since a single header field cannot be larger
  than the total size allowed for all headers combined, this value is validated against
  :ref:`max_request_headers_kb <envoy_v3_api_field_extensions.filters.network.http_connection_manager.v3.HttpConnectionManager.max_request_headers_kb>`
  when configured on the downstream HTTP Connection Manager, and against
  :ref:`max_response_headers_kb <envoy_v3_api_field_config.core.v3.HttpProtocolOptions.max_response_headers_kb>`
  when configured on an upstream cluster.

  Since ``Http2ProtocolOptions`` is configured independently for downstream and upstream,
  different per-header field limits can be set for each direction without requiring separate
  request and response fields.

  .. note::

    When increasing this limit, ensure that upstream services and other proxies in the request
    path can also handle the larger individual header sizes. Mismatched limits may result in
    request failures.


.. _envoy_v3_api_field_config.core.v3.Http2ProtocolOptions.disallow_obs_text:


disallow_obs_text
  (`BoolValue <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#boolvalue>`_) Whether to disallow obsolete text for oghttp2 in header field values.
  If not set, it defaults to false.
  From RFC 9110, https://www.rfc-editor.org/rfc/rfc9110.html#section-5.5:
  obs-text = %x80-FF


.. _envoy_v3_api_msg_config.core.v3.Http2ProtocolOptions.SettingsParameter:

config.core.v3.Http2ProtocolOptions.SettingsParameter
-----------------------------------------------------


:repo:`[config.core.v3.Http2ProtocolOptions.SettingsParameter proto] <api/envoy/config/core/v3/protocol.proto#L561>`

Defines a parameter to be sent in the SETTINGS frame.
See `RFC7540, sec. 6.5.1 <https://tools.ietf.org/html/rfc7540#section-6.5.1>`_ for details.



.. code-block:: json
  :force:

  {
    "identifier": {...},
    "value": {...}
  }

.. _envoy_v3_api_field_config.core.v3.Http2ProtocolOptions.SettingsParameter.identifier:


identifier
  (`UInt32Value <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#uint32value>`_, *REQUIRED*) The 16 bit parameter identifier.


.. _envoy_v3_api_field_config.core.v3.Http2ProtocolOptions.SettingsParameter.value:


value
  (`UInt32Value <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#uint32value>`_, *REQUIRED*) The 32 bit parameter value.






.. _envoy_v3_api_msg_config.core.v3.Http3ProtocolOptions:

config.core.v3.Http3ProtocolOptions
-----------------------------------


:repo:`[config.core.v3.Http3ProtocolOptions proto] <api/envoy/config/core/v3/protocol.proto#L805>`

A message which allows using HTTP/3.



.. code-block:: json
  :force:

  {
    "quic_protocol_options": {...},
    "override_stream_error_on_invalid_http_message": {...},
    "allow_extended_connect": ...,
    "disable_connection_flow_control_for_streams": ...,
    "disallow_obs_text": {...}
  }

.. _envoy_v3_api_field_config.core.v3.Http3ProtocolOptions.quic_protocol_options:


quic_protocol_options
  (:ref:`config.core.v3.QuicProtocolOptions <envoy_v3_api_msg_config.core.v3.QuicProtocolOptions>`) 

.. _envoy_v3_api_field_config.core.v3.Http3ProtocolOptions.override_stream_error_on_invalid_http_message:


override_stream_error_on_invalid_http_message
  (`BoolValue <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#boolvalue>`_) Allows invalid HTTP messaging and headers. When this option is disabled (default), then
  the whole HTTP/3 connection is terminated upon receiving invalid HEADERS frame. However,
  when this option is enabled, only the offending stream is terminated.

  If set, this overrides any HCM :ref:`stream_error_on_invalid_http_messaging
  <envoy_v3_api_field_extensions.filters.network.http_connection_manager.v3.HttpConnectionManager.stream_error_on_invalid_http_message>`.


.. _envoy_v3_api_field_config.core.v3.Http3ProtocolOptions.allow_extended_connect:


allow_extended_connect
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Allows proxying Websocket and other upgrades over HTTP/3 CONNECT using
  the header mechanisms from the `HTTP/2 extended connect RFC
  <https://datatracker.ietf.org/doc/html/rfc8441>`_
  and settings `proposed for HTTP/3
  <https://datatracker.ietf.org/doc/draft-ietf-httpbis-h3-websockets/>`_

  .. note::

    HTTP/3 CONNECT is not yet an RFC.

  .. warning::
     This API feature is currently work-in-progress. API features marked as work-in-progress are not considered stable, are not covered by the :ref:`threat model <arch_overview_threat_model>`, are not supported by the security team, and are subject to breaking changes. Do not use this feature without understanding each of the previous points.



.. _envoy_v3_api_field_config.core.v3.Http3ProtocolOptions.disable_connection_flow_control_for_streams:


disable_connection_flow_control_for_streams
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Disables connection level flow control for HTTP/3 streams. This is useful in situations where the streams share the same connection
  but originate from different end-clients, so that each stream can make progress independently at non-front-line proxies.


.. _envoy_v3_api_field_config.core.v3.Http3ProtocolOptions.disallow_obs_text:


disallow_obs_text
  (`BoolValue <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#boolvalue>`_) Whether to disallow obsolete text in header field values.
  If not set, it defaults to true for alignment with current behavior.
  As defined in RFC 9110, https://www.rfc-editor.org/rfc/rfc9110.html#section-5.5:
  an obs-text character is a character in the range %x80-FF



.. _envoy_v3_api_msg_config.core.v3.SchemeHeaderTransformation:

config.core.v3.SchemeHeaderTransformation
-----------------------------------------


:repo:`[config.core.v3.SchemeHeaderTransformation proto] <api/envoy/config/core/v3/protocol.proto#L855>`

A message to control transformations to the :scheme header



.. code-block:: json
  :force:

  {
    "scheme_to_overwrite": ...,
    "match_upstream": ...
  }

.. _envoy_v3_api_field_config.core.v3.SchemeHeaderTransformation.scheme_to_overwrite:


scheme_to_overwrite
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Overwrite any Scheme header with the contents of this string.
  If set, takes precedence over ``match_upstream``.


  

.. _envoy_v3_api_field_config.core.v3.SchemeHeaderTransformation.match_upstream:


match_upstream
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Set the Scheme header to match the upstream transport protocol. For example, should a
  request be sent to the upstream over TLS, the scheme header will be set to ``"https"``. Should the
  request be sent over plaintext, the scheme header will be set to ``"http"``.
  If ``scheme_to_overwrite`` is set, this field is not used.


